HBASE-28832 Fixed Tasks table row background colors were not visible
Make sure background color is visible in tables (Tasks) where alert class is used.

--- a/hbase-server/src/main/resources/hbase-webapps/static/css/hbase.css
+++ b/hbase-server/src/main/resources/hbase-webapps/static/css/hbase.css
@@ -63,6 +63,10 @@ a {
     padding-top: 16px;
   }
 }
+/* Make sure background color is visible in tables (Tasks) where alert class is used. */
+tr.alert td {
+  background: none;
+}
 /* End of Preserve original HBase UI colors */
 
 body { padding-top: 50px; }
